--- a/Dev/_server/registration/templates/registration/index.html
+++ b/Dev/_server/registration/templates/registration/index.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <!-- TODO: Style welcome page -->
-</body>
-</html>
+{% extends "registration/base.html"%}
+
+{% block content %}
+
+<nav class="navbar">
+    <a href="">Log in</a>
+    <a href="">Sign Up</a>
+</nav>
+<main class="welcome-page">
+    <h2>Cupid Code</h2>
+    <div class="info-blurb">
+        
+    </div>
+</main>
+{% endlbock %}
