Trying to get everything ready for formatting & able to add components

--- a/Dev/_server/registration/templates/registration/index.html
+++ b/Dev/_server/registration/templates/registration/index.html
@@ -3,8 +3,8 @@
 {% block content %}
 
 <nav class="navbar">
-    <a href="">Log in</a>
-    <a href="">Sign Up</a>
+    <a href="/registration/sign_in/">Log in</a>
+    <a href="/registration/sign_up/">Sign Up</a>
 </nav>
 <main class="welcome-page">
     <h2>Cupid Code</h2>
@@ -17,7 +17,7 @@
         Worried about those nerve-wracking moments during your date? Activate our listening feature and let the AI discreetly guide you towards success. <br>
         Keep your love life organized with our handy calendar feature, ensuring you never miss a chance to charm that special someone. <br>
         And with our built-in transaction system, you can set a budget for the AI to use in securing goods and services, ensuring your date goes off without a hitch.<br>
-        Say goodbye to dating woes and hello to a world of endless possibilities with Cupid Code. Whether you're a seasoned romantic or a first-time dater, 
+        Say goodbye to dating woes and hello to a world of endless possibilities with Cupid Code. Whether you're a seasoned romantic or a first-time dater, <br>
         let us help you crack the code to finding love in the digital age. Welcome to your new favorite wingman!
     </div>
 </main>
