--- a/Dev/_server/registration/templates/registration/index.html
+++ b/Dev/_server/registration/templates/registration/index.html
@@ -3,8 +3,9 @@
 {% block content %}
 
 <nav class="navbar">
+    <a href="/registration/dater/">Sign Up to be a Dater!</a>
+    <a href="/registration/cupid/">Sign Up to be a Cupid!</a>
     <a href="/registration/sign_in/">Log in</a>
-    <a href="/registration/sign_up/">Sign Up</a>
 </nav>
 <main class="welcome-page">
     <h2>Cupid Code</h2>
@@ -20,5 +21,6 @@
         Say goodbye to dating woes and hello to a world of endless possibilities with Cupid Code. Whether you're a seasoned romantic or a first-time dater, <br>
         let us help you crack the code to finding love in the digital age. Welcome to your new favorite wingman!
     </div>
+    <a href="/registration/dater/">Sign up today!</a>
 </main>
 {% endlbock %}
