Started work on Vue Pages: Login and Create Account

--- a/Dev/client/src/style.css
+++ b/Dev/client/src/style.css
@@ -1,4 +1,24 @@
 :root {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  background-color: #FFFFFF;
+}
+
+button {
+  color: #ff6ba2;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+button:hover {
+  border-color: #5675FF;
+}
+
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -76,4 +96,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
