--- a/Dev/client/src/style.css
+++ b/Dev/client/src/style.css
@@ -11,6 +11,12 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --primary-blue: #46ADF0;
+  --secondary-blue: #10194B;
+  --primary-red: #F02A69;
+  --secondary-red: #802446;
+  --content-background: #FCEBFF;
 }
 
 a {
