--- a/Dev/client/src/style.css
+++ b/Dev/client/src/style.css
@@ -10,3 +10,64 @@
 body {
   margin: 0;
 }
+
+.image {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  border-radius: 16px;
+}
+
+.nav {
+  color: white;
+  background-color: var(--primary-blue);
+  top: 0;
+  left: 0;
+  right: 0; 
+  display: flex;
+  position: absolute;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 8px 16px;
+}
+
+.daternav {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.navbar {
+  background-color: var(--primary-blue);
+  height: 100%;
+  margin: 5px;
+  margin-top: 10px;
+  width: 0;
+  position: fixed; 
+  z-index: 1;
+  top: 0; 
+  left: 0;
+  overflow-x: hidden; 
+  padding-top: 60px; 
+  transition: 0.5s; 
+}
+
+.opened {
+  overflow-x: visible;
+}
+
+.icon-button {
+  border: none;
+  background-color: var(--primary-blue);
+  display: flex;
+  padding: 4px;
+  width: 25px;
+  height: 25px;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon {
+  display: flex;
+  justify-content: center;
+  color: white;
+}
