--- a/Dev/client/src/style.css
+++ b/Dev/client/src/style.css
@@ -1,9 +1,9 @@
 :root {
   font-family: Arial, Helvetica, sans-serif;
   --primary-blue: #46ADF0;
-  --secondary-blue: #10194B;
+  --secondary-blue: #38448a;
   --primary-red: #F02A69;
-  --secondary-red: #802446;
+  --secondary-red: #9b375c;
   --content-background: #FCEBFF;
 }
 
@@ -33,25 +33,29 @@ body {
 
 .homenav {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
 }
 
 .navbar {
   background-color: var(--primary-blue);
+  background-position-x: 0;
   height: 100%;
-  margin: 5px;
-  margin-top: 10px;
-  width: 0;
+  margin-top: 40px;
   position: fixed; 
   z-index: 1;
-  top: 0; 
+  width: 0px;
+  top: 0;
   left: 0;
   overflow-x: hidden; 
-  padding-top: 60px; 
   transition: 0.5s; 
 }
 
 .opened {
+  display: flex;
+  padding-left: 16px; 
+  flex-flow: column nowrap;
+  justify-content: flex-start;
+  width: 150px;
   overflow-x: visible;
 }
 
