--- a/Dev/client/src/style.css
+++ b/Dev/client/src/style.css
@@ -73,5 +73,21 @@ body {
 .icon {
   display: flex;
   justify-content: center;
+}
+
+.link {
   color: white;
+  gap: 10px;
+  padding-bottom: 4px;
+}
+
+.logout {
+  display: flex;
+  align-self: center;
+  color: white;
+  background-color: var(--secondary-red);
+  border: none;
+  border-radius: 4px;
+  margin: 8px;
+  margin-top: 300px;
 }
