--- a/Dev/client/src/style.css
+++ b/Dev/client/src/style.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   --primary-blue: #46ADF0;
   --secondary-blue: #38448a;
   --primary-red: #F02A69;
