--- a/Dev/client/src/style.css
+++ b/Dev/client/src/style.css
@@ -2,7 +2,7 @@
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   --primary-blue: #46ADF0;
   --secondary-blue: #4c589c;
-  --primary-red: #F02A69;
+  --primary-red: #f04b7f;
   --secondary-red: #a55271;
   --content-background: #FCEBFF;
 }
