Change title in browser

--- a/Dev/_server/core/templates/core/index.html
+++ b/Dev/_server/core/templates/core/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vite + Django</title>
+  <title>Cupid Code</title>
   {% if debug %}
     <script type="module" src="{{asset_url}}/static/@vite/client"></script>
     <script type="module" src="{{asset_url}}/static/src/main.js"></script>
