--- a/Code/server/core/templates/core/index.html
+++ b/Code/server/core/templates/core/index.html
@@ -23,6 +23,9 @@
   {% endif %}
 </head>
 <body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"> </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   {% csrf_token %}
   <div id="app"></div>
 </body>
