--- a/Code/client/src/style.css
+++ b/Code/client/src/style.css
@@ -129,3 +129,36 @@ body {
   margin-right: calc(100% - 240px);
   padding: 10px;
 }
+
+/* These are for Calendar */
+.date {
+  text-align: center;
+  color: white;
+  display: flex;
+  margin: 20px;
+  padding: 10px;
+  flex-direction: column;
+  background-color: var(--primary-blue);
+  border-radius: 4px;
+}
+
+.date h3 {
+  margin: 4px;
+  border-bottom: 2px solid var(--secondary-blue);
+}
+
+.button {
+  display: flex;
+  justify-content: center;
+  background-color: var(--secondary-red);
+  border: none;
+  border-radius: 4px;
+  padding: 8px;
+  margin: 2px 4px;
+  color: white;
+  box-shadow: 5px 5px 2px rgba(0, 0, 0, 0.2);
+}
+
+.button:hover {
+  filter: brightness(.7);
+}
